[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "materials"
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
    { name = "moskomule", email = "moskomule@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "rich",
    "ipykernel",
    "numpy",
    "scipy",
    "matplotlib",
]
dynamic = ["version"]

[tool.hatch.envs.default.env-vars]
PIP_EXTRA_INDEX_URL = "https://pypi.org/simple/"

[project.urls]
Documentation = "https://moskomule.github.io/materials"
Issues = "https://github.com/moskomule/materials/issues"
Source = "https://github.com/moskomule/materials"

[tool.hatch.version]
path = "materials/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
]